--- a/index.html
+++ b/index.html
@@ -1,1 +1,20 @@
-
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
+    <title>git bersama</title>
+</head>
+<body>
+    <h1>ini judul</h1>
+    <div>
+    <img src="img/paimon.jpg" alt="sayangku">
+    <p>Lorem ipsum dolor sit amet consectetur
+         adipisicing elit. Porro error at enim itaque necessitatibus modi,
+         minima quia! Placeat quam optio vero maiores consequatur quasi odit 
+         hic, ea architecto cum animi.</p>
+    </div>
+</body>
+</html>
